--- a/index.css
+++ b/index.css
@@ -91,7 +91,16 @@ button {
   justify-content: center;
   height: 100%;
   width: 100%;
-  text-decoration: none;
+  height: 100px;
+  white-space: normal;
+}
+.langboks {
+  grid-column: 1 / span 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
   height: 100px;
   white-space: normal;
 }
